Updating to 9aaeb5f32740989d63cd6b077c7f4c7bc9eed05b.

--- a/html2/index.html
+++ b/html2/index.html
@@ -227,7 +227,7 @@ Date:   Tue Jul 2 14:19:30 2013 +0100
 
 <p><img alt='Creating a repo on GitHub' src='/assets/create_repo.png' /></p>
 
-<p>Follow the instructions, calling it something like <code>first_site</code>. You&#8217;ll get to a page when it&#8217;ll describe how to get your code online. You want to follow the instructions for &#8220;Pushing an existing repository to github&#8221;.</p>
+<p>Follow the instructions, calling it something like <code>first_site</code>. <strong>Do not</strong> click the box which says &#8216;Create a readme with this repository&#8217;. You&#8217;ll get to a page when it&#8217;ll describe how to get your code online. You want to follow the instructions for &#8220;Pushing an existing repository to github&#8221;.</p>
 
 <p><img alt='Push repo to GitHub' src='/assets/push_repo_github.png' /></p>
 
