--- a/ruby7/index.html
+++ b/ruby7/index.html
@@ -36,7 +36,11 @@
 <ul class="nav nav-tabs" id="myTab">
 	
 		
-		<li class="active"><a href="#more_classes" data-toggle="tab">More classes </a></li>
+		<li class="active"><a href="#1_more_classes" data-toggle="tab">Data </a></li>
+		
+	
+		
+		<li><a href="#2_normalising_data" data-toggle="tab">Normalising data </a></li>
 		
 	
 </ul>
@@ -44,11 +48,57 @@
 <div class="tab-content">
 
 	
-	<div class="tab-pane active" id="more_classes">
+	<div class="tab-pane active" id="1_more_classes">
 	
 
-		<h2>More classes</h2>
-		
+		<h2>Data</h2>
+		<div class='exercise alert alert-info'><strong>
+<p>Task:</p>
+</strong>
+<ol>
+<li>
+<p>Clone the repository for the session:</p>
+
+<pre><code> git clone https://github.com/TomClose/ruby7.git</code></pre>
+</li>
+
+<li>
+<p>Take a look at <code>vote_data.csv</code> in Excel (or similar).</p>
+</li>
+
+<li>
+<p>Take a look at <code>vote_data.rb</code> to see if you can figure out what&#8217;s going on.</p>
+</li>
+
+<li>
+<p>Fill in the missing functions in <code>vote_data.rb</code>:</p>
+
+<ul>
+<li>VoteDataTable#votes_for_mp</li>
+
+<li>VoteDataTable#votes_for_bill</li>
+
+<li>VoteDataTable#write</li>
+</ul>
+</li>
+</ol>
+</div>
+	</div>
+
+	
+	<div class="tab-pane " id="2_normalising_data">
+	
+
+		<h2>Normalising data</h2>
+		<div class='exercise alert alert-info'><strong>
+<p>Task:</p>
+</strong>
+<ol>
+<li>Open <code>vote_data_normalised.rb</code>.</li>
+
+<li>Complete the <code>BillTable</code> and <code>BillRow</code> classes.</li>
+</ol>
+</div>
 	</div>
 
 </div>
