--- a/plan.html
+++ b/plan.html
@@ -88,7 +88,7 @@
 </tr><tr><td style='text-align: left;'>3</td><td style='text-align: left;'>ruby arrays/hashes, start joint project, forms</td>
 </tr><tr><td style='text-align: left;'>4</td><td style='text-align: left;'>git branching, analytics, ruby up to classes</td>
 </tr><tr><td style='text-align: left;'>5</td><td style='text-align: left;'>databases, rubygems, bootstrap js, js in console</td>
-</tr><tr><td style='text-align: left;'>6</td><td style='text-align: left;'>sinatra, own js, mobile app</td>
+</tr><tr><td style='text-align: left;'>6</td><td style='text-align: left;'>sinatra, own js, mobile app, RESTful services, HTTP verbs</td>
 </tr><tr><td style='text-align: left;'>7</td><td style='text-align: left;'>rails</td>
 </tr><tr><td style='text-align: left;'>8</td><td style='text-align: left;'>own project + more rails</td>
 </tr><tr><td style='text-align: left;'>9</td>
