Updating to 9aaeb5f32740989d63cd6b077c7f4c7bc9eed05b.

--- a/lp1/index.html
+++ b/lp1/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>lp1</title>
+  <title>Landing Page 1</title>
   <meta name="viewport" content="width=device-width">
   <!-- Twitter bootstrap basic styles -->
   <link rel="stylesheet" href="/bootstrap/css/bootstrap.css">
@@ -29,7 +29,7 @@
   <div class="container">
 
     <div class="page-header">
-  <h1>lp1 <small></small></h1>
+  <h1>Landing Page 1 <small>The brief</small></h1>
 </div>
 
 <div class="tabbable tabs-left">
@@ -133,9 +133,9 @@
 
 <li>Read the <a href='http://visualwebsiteoptimizer.com/split-testing-blog/landing-page-optimization-tips-increases-sales-conversions/'>Visual Website Optimizer article on landing pages</a>.</li>
 
-<li>Read through <a href='http://24ways.org/2012/how-to-make-your-site-look-half-decent/'>&#8220;how to make your site half decent&#8221;</a></li>
+<li>Read through <a href='http://24ways.org/2012/how-to-make-your-site-look-half-decent/'>How to make your site half decent</a>.</li>
 
-<li>Check out the sort of things other coding courses are doing: - <a href='http://www.makersacademy.com/'>Makers Academy</a> - <a href='https://generalassemb.ly/'>General Assembly</a> - <a href='http://decoded.co/'>Decoded</a> - <a href='http://www.starterleague.com/nextquarter'>Starter League</a></li>
+<li>Check out the sort of things other coding courses are doing: * <a href='http://www.makersacademy.com/'>Makers Academy</a> * <a href='https://generalassemb.ly/'>General Assembly</a> * <a href='http://decoded.co/'>Decoded</a> * <a href='http://www.starterleague.com/nextquarter'>Starter League</a></li>
 </ul>
 	</div>
 
