Updating to 9aaeb5f32740989d63cd6b077c7f4c7bc9eed05b.

--- a/cfg.html
+++ b/cfg.html
@@ -30,10 +30,18 @@
 
     <h1 id='code_first_girls_2013'>Code First: Girls 2013</h1>
 
+<h3 id='session_5__1672013'>Session 5 - 16/7/2013</h3>
+
+<ul>
+<li><a href='/ruby3'>Intro to Ruby 3</a></li>
+
+<li><a href='/lp1'>Landing Page 1</a></li>
+</ul>
+
 <h3 id='session_4__1172013'>Session 4 - 11/7/2013</h3>
 
 <ul>
-<li><a href='/ruby2'>Ruby 2</a></li>
+<li><a href='/ruby2'>Intro to Ruby 2</a></li>
 
 <li><a href='/html4'>Web Fundamentals 4</a></li>
 
@@ -43,7 +51,7 @@
 <h3 id='session_3__972013'>Session 3 - 9/7/2013</h3>
 
 <ul>
-<li><a href='/ruby1'>Ruby 1</a></li>
+<li><a href='/ruby1'>Intro to Ruby 1</a></li>
 
 <li><a href='/html3'>Web Fundamentals 3</a></li>
 
