--- a/lp1/index.html
+++ b/lp1/index.html
@@ -135,7 +135,7 @@
 
 <li>Read through <a href='http://24ways.org/2012/how-to-make-your-site-look-half-decent/'>How to make your site half decent</a>.</li>
 
-<li>Check out the sort of things other coding courses are doing: * <a href='http://www.makersacademy.com/'>Makers Academy</a> * <a href='https://generalassemb.ly/'>General Assembly</a> * <a href='http://decoded.co/'>Decoded</a> * <a href='http://www.starterleague.com/nextquarter'>Starter League</a></li>
+<li>Check out the sort of things other coding courses are doing: - <a href='http://www.makersacademy.com/'>Makers Academy</a> - <a href='https://generalassemb.ly/'>General Assembly</a> - <a href='http://decoded.co/'>Decoded</a> - <a href='http://www.starterleague.com/nextquarter'>Starter League</a></li>
 </ul>
 	</div>
 
