Updating to 9aaeb5f32740989d63cd6b077c7f4c7bc9eed05b.

--- a/cfg.html
+++ b/cfg.html
@@ -36,6 +36,8 @@
 <li><a href='/ruby3'>Intro to Ruby 3</a></li>
 
 <li><a href='/lp1'>Landing Page 1</a></li>
+
+<li><a href='/hmwk5'>Homework 5</a></li>
 </ul>
 
 <h3 id='session_4__1172013'>Session 4 - 11/7/2013</h3>
