Updating to 9aaeb5f32740989d63cd6b077c7f4c7bc9eed05b.

--- a/hmwk5/index.html
+++ b/hmwk5/index.html
@@ -39,6 +39,10 @@
 		<li class="active"><a href="#1_finishing_off" data-toggle="tab">Finishing off </a></li>
 		
 	
+		
+		<li><a href="#2_more_ruby" data-toggle="tab">More Ruby </a></li>
+		
+	
 </ul>
 
 <div class="tab-content">
@@ -71,6 +75,14 @@
 </strong>
 <p>From <a href='/lp1'>Landing page 1</a>: 1. Work on your joint project. By next session you should have an <code>index.html</code> with some text on it and a link to a blank page called <code>form.html</code>.</p>
 </div>
+	</div>
+
+	
+	<div class="tab-pane " id="2_more_ruby">
+	
+
+		<h2>More Ruby</h2>
+		
 	</div>
 
 </div>
