--- a/ruby4/index.html
+++ b/ruby4/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>ruby4</title>
+  <title>Intro to Ruby 4</title>
   <meta name="viewport" content="width=device-width">
   <!-- Twitter bootstrap basic styles -->
   <link rel="stylesheet" href="/bootstrap/css/bootstrap.css">
@@ -29,7 +29,7 @@
   <div class="container">
 
     <div class="page-header">
-  <h1>ruby4 <small></small></h1>
+  <h1>Intro to Ruby 4 <small>Hashes and Symbols</small></h1>
 </div>
 
 <div class="tabbable tabs-left">
@@ -48,7 +48,11 @@
 		
 	
 		
-		<li><a href="#wrapping_up" data-toggle="tab">Wrapping up </a></li>
+		<li><a href="#4_hash_array_conversion" data-toggle="tab">Arrays and back </a></li>
+		
+	
+		
+		<li><a href="#5_wrapping_up" data-toggle="tab">Wrapping up </a></li>
 		
 	
 </ul>
@@ -85,7 +89,7 @@
 </li>
 
 <li>
-<p>With your partner work through <code>ruby4/hash.rb</code>. See if you can guess what each expression will do, then test by pasting into irb.</p>
+<p>With your partner work through <code>ruby4/hash_examples.rb</code>. See if you can guess what each expression will do, then test by pasting into irb.</p>
 </li>
 </ol>
 </div>
@@ -131,8 +135,6 @@
 <li><code>keys</code>, <code>values</code></li>
 
 <li><code>has_key?</code>, <code>has_value?</code></li>
-
-<li><code>invert</code> (swaps keys with values)</li>
 </ul>
 
 <h3 id='iterating'>Iterating</h3>
@@ -180,25 +182,7 @@
 <span class='n'>square_numbers</span> <span class='c1'>#=&gt; {5 =&gt; 25, 6 =&gt; 36}</span>
 </code></pre></div>
 <p>The above could be used to save the results of an expensive calculation: if you do <code>square_numbers[5]</code> again it doesn&#8217;t need to work it out - it just looks up the result.</p>
-
-<h3 id='converting_to_arrays_and_back'>Converting to arrays and back</h3>
-
-<p>You can convert a hash to an array using the <code>to_a</code> method and use the <code>Hash[ ]</code> syntax to convert it back:</p>
-<div class='highlight'><pre><code class='ruby'><span class='n'>h</span> <span class='o'>=</span> <span class='p'>{</span><span class='s1'>&#39;a&#39;</span> <span class='o'>=&gt;</span> <span class='mi'>1</span><span class='p'>,</span> <span class='s1'>&#39;b&#39;</span> <span class='o'>=&gt;</span> <span class='mi'>2</span><span class='p'>}</span>
-
-<span class='n'>h</span><span class='o'>.</span><span class='n'>to_a</span> <span class='c1'>#=&gt; [[&#39;a&#39;, 1], [&#39;b&#39;, 2]]</span>
-
-<span class='n'>h2</span> <span class='o'>=</span> <span class='no'>Hash</span><span class='o'>[[</span><span class='s1'>&#39;a&#39;</span><span class='p'>,</span> <span class='mi'>1</span><span class='o'>]</span><span class='p'>,</span> <span class='o'>[</span><span class='s1'>&#39;b&#39;</span><span class='p'>,</span> <span class='mi'>2</span><span class='o'>]]</span>
-</code></pre></div>
-<p>The <code>Hash[ ]</code> is also useful for creating a hash from arrays of keys and values (which is surprisingly useful).</p>
-<div class='highlight'><pre><code class='ruby'><span class='n'>keys</span> <span class='o'>=</span> <span class='o'>[</span><span class='mi'>1</span><span class='p'>,</span> <span class='mi'>2</span><span class='p'>,</span> <span class='mi'>3</span><span class='o'>]</span>
-<span class='n'>values</span> <span class='o'>=</span> <span class='o'>[</span><span class='s1'>&#39;one&#39;</span><span class='p'>,</span> <span class='s1'>&#39;two&#39;</span><span class='p'>,</span> <span class='s1'>&#39;three&#39;</span><span class='o'>]</span>
-
-<span class='c1'># use Array#zip to get the arrays in the right format</span>
-<span class='n'>zipped</span> <span class='o'>=</span> <span class='n'>keys</span><span class='o'>.</span><span class='n'>zip</span><span class='p'>(</span><span class='n'>values</span><span class='p'>)</span>  <span class='c1'>#=&gt; [[1, &#39;one&#39;], [2, &#39;two&#39;], [3, &#39;three&#39;]]</span>
-
-<span class='n'>h</span> <span class='o'>=</span> <span class='no'>Hash</span><span class='o'>[</span><span class='n'>zipped</span><span class='o'>]</span>  <span class='c1'>#=&gt; {1 =&gt; &#39;one&#39;, 2 =&gt; &#39;two&#39;, 3 =&gt; &#39;three&#39;}</span>
-</code></pre></div><div class='exercise alert alert-info'><strong>
+<div class='exercise alert alert-info'><strong>
 <p>Task:</p>
 </strong>
 <ol>
@@ -230,6 +214,8 @@
 </code></pre></div><div class='exercise alert alert-info'><strong>
 <p>Task:</p>
 </strong>
+<p>(Optional)</p>
+
 <ol>
 <li>Do <code>ruby4/symbolize_keys.rb</code>.</li>
 
@@ -239,7 +225,44 @@
 	</div>
 
 	
-	<div class="tab-pane " id="wrapping_up">
+	<div class="tab-pane " id="4_hash_array_conversion">
+	
+
+		<h2>Arrays and back</h2>
+		<p>This page is more advanced. This stuff is sometimes useful, but don&#8217;t worry if you want to skip over it the first time through.</p>
+
+<h3 id='converting_to_arrays_and_back'>Converting to arrays and back</h3>
+
+<p>You can convert a hash to an array using the <code>to_a</code> method and use the <code>Hash[ ]</code> syntax to convert it back:</p>
+<div class='highlight'><pre><code class='ruby'><span class='n'>h</span> <span class='o'>=</span> <span class='p'>{</span><span class='s1'>&#39;a&#39;</span> <span class='o'>=&gt;</span> <span class='mi'>1</span><span class='p'>,</span> <span class='s1'>&#39;b&#39;</span> <span class='o'>=&gt;</span> <span class='mi'>2</span><span class='p'>}</span>
+
+<span class='n'>h</span><span class='o'>.</span><span class='n'>to_a</span> <span class='c1'>#=&gt; [[&#39;a&#39;, 1], [&#39;b&#39;, 2]]</span>
+
+<span class='n'>h2</span> <span class='o'>=</span> <span class='no'>Hash</span><span class='o'>[[</span><span class='s1'>&#39;a&#39;</span><span class='p'>,</span> <span class='mi'>1</span><span class='o'>]</span><span class='p'>,</span> <span class='o'>[</span><span class='s1'>&#39;b&#39;</span><span class='p'>,</span> <span class='mi'>2</span><span class='o'>]]</span>
+</code></pre></div>
+<p>The <code>Hash[ ]</code> is also useful for creating a hash from arrays of keys and values (which is surprisingly useful).</p>
+<div class='highlight'><pre><code class='ruby'><span class='n'>keys</span> <span class='o'>=</span> <span class='o'>[</span><span class='mi'>1</span><span class='p'>,</span> <span class='mi'>2</span><span class='p'>,</span> <span class='mi'>3</span><span class='o'>]</span>
+<span class='n'>values</span> <span class='o'>=</span> <span class='o'>[</span><span class='s1'>&#39;one&#39;</span><span class='p'>,</span> <span class='s1'>&#39;two&#39;</span><span class='p'>,</span> <span class='s1'>&#39;three&#39;</span><span class='o'>]</span>
+
+<span class='c1'># use Array#zip to get the arrays in the right format</span>
+<span class='n'>zipped</span> <span class='o'>=</span> <span class='n'>keys</span><span class='o'>.</span><span class='n'>zip</span><span class='p'>(</span><span class='n'>values</span><span class='p'>)</span>  <span class='c1'>#=&gt; [[1, &#39;one&#39;], [2, &#39;two&#39;], [3, &#39;three&#39;]]</span>
+
+<span class='n'>h</span> <span class='o'>=</span> <span class='no'>Hash</span><span class='o'>[</span><span class='n'>zipped</span><span class='o'>]</span>  <span class='c1'>#=&gt; {1 =&gt; &#39;one&#39;, 2 =&gt; &#39;two&#39;, 3 =&gt; &#39;three&#39;}</span>
+</code></pre></div><div class='exercise alert alert-info'><strong>
+<p>Task:</p>
+</strong>
+<p>(Optional)</p>
+
+<ol>
+<li>Work through <code>array_conversion_examples.rb</code>, copying and pasting into irb.</li>
+
+<li>See if you can do the challenge at the end.</li>
+</ol>
+</div>
+	</div>
+
+	
+	<div class="tab-pane " id="5_wrapping_up">
 	
 
 		<h2>Wrapping up</h2>
