Updating to 9aaeb5f32740989d63cd6b077c7f4c7bc9eed05b.

--- a/ruby4/index.html
+++ b/ruby4/index.html
@@ -85,7 +85,7 @@
 <li>
 <p>Grab the code for the session:</p>
 
-<pre><code>git clone https://github.com/TomClose/ruby4.git</code></pre>
+<pre><code>git clone https://github.com/code61/ruby4.git</code></pre>
 </li>
 
 <li>
