--- a/lp2/index.html
+++ b/lp2/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>lp2</title>
+  <title>Landing page 2</title>
   <meta name="viewport" content="width=device-width">
   <!-- Twitter bootstrap basic styles -->
   <link rel="stylesheet" href="/bootstrap/css/bootstrap.css">
@@ -29,7 +29,7 @@
   <div class="container">
 
     <div class="page-header">
-  <h1>lp2 <small></small></h1>
+  <h1>Landing page 2 <small>HTML Forms</small></h1>
 </div>
 
 <div class="tabbable tabs-left">
@@ -60,14 +60,7 @@
 	
 
 		<h2>Basic forms</h2>
-		<div class='highlight'><pre><code class='html'><span class='nt'>&lt;form&gt;</span>
-    <span class='nt'>&lt;input</span> <span class='na'>type=</span><span class='s'>&#39;text&#39;</span> <span class='na'>name=</span><span class='s'>&#39;name&#39;</span><span class='nt'>&gt;</span>
-    <span class='nt'>&lt;input</span> <span class='na'>type=</span><span class='s'>&#39;text&#39;</span> <span class='na'>name=</span><span class='s'>&#39;email&#39;</span><span class='nt'>&gt;</span>
-
-    <span class='nt'>&lt;input</span> <span class='na'>type=</span><span class='s'>&#39;submit&#39;</span><span class='nt'>&gt;</span>
-<span class='nt'>&lt;/form&gt;</span>
-</code></pre></div>
-<h3 id='forms_with_labels'>Forms with labels</h3>
+		<p>A basic html form looks like this:</p>
 <div class='highlight'><pre><code class='html'><span class='nt'>&lt;form&gt;</span>
     <span class='nt'>&lt;input</span> <span class='na'>type=</span><span class='s'>&#39;text&#39;</span> <span class='na'>name=</span><span class='s'>&#39;name&#39;</span><span class='nt'>&gt;</span>
     <span class='nt'>&lt;input</span> <span class='na'>type=</span><span class='s'>&#39;text&#39;</span> <span class='na'>name=</span><span class='s'>&#39;email&#39;</span><span class='nt'>&gt;</span>
@@ -75,6 +68,45 @@
     <span class='nt'>&lt;input</span> <span class='na'>type=</span><span class='s'>&#39;submit&#39;</span><span class='nt'>&gt;</span>
 <span class='nt'>&lt;/form&gt;</span>
 </code></pre></div>
+<p>It has the following features:</p>
+
+<ul>
+<li>The whole form is contained with <code>&lt;form&gt;...&lt;/form&gt;</code> tags.</li>
+
+<li>It has two text fields, using <code>&lt;input&gt;</code> tags.</li>
+
+<li>The input tags are stand-alone tags: they have no closing <code>&lt;/input&gt;</code>.</li>
+
+<li>It has a submit button <code>&lt;input type=&#39;submit&#39;&gt;</code>.</li>
+</ul>
+
+<h3 id='forms_with_labels'>Forms with labels</h3>
+
+<p>The above form contains only text boxes. A user visiting the form would have no idea what to put in each box. We can fix this with some simple labels:</p>
+<div class='highlight'><pre><code class='html'><span class='nt'>&lt;form&gt;</span>
+    <span class='nt'>&lt;label&gt;</span>Name<span class='nt'>&lt;/label&gt;</span>
+    <span class='nt'>&lt;input</span> <span class='na'>type=</span><span class='s'>&#39;text&#39;</span> <span class='na'>name=</span><span class='s'>&#39;name&#39;</span><span class='nt'>&gt;</span>
+
+    <span class='nt'>&lt;label&gt;</span>Email<span class='nt'>&lt;/label&gt;</span>
+    <span class='nt'>&lt;input</span> <span class='na'>type=</span><span class='s'>&#39;text&#39;</span> <span class='na'>name=</span><span class='s'>&#39;email&#39;</span><span class='nt'>&gt;</span>
+
+    <span class='nt'>&lt;input</span> <span class='na'>type=</span><span class='s'>&#39;submit&#39;</span><span class='nt'>&gt;</span>
+<span class='nt'>&lt;/form&gt;</span>
+</code></pre></div><div class='exercise alert alert-info'><strong>
+<p>Task:</p>
+</strong>
+<ol>
+<li>
+<p>Clone the code for this session:</p>
+
+<p>git clone https://github.com/code61/html_forms.git</p>
+</li>
+
+<li>
+<p>Open &#8216;basic_form.html&#8217; in Sublime Text and Chrome.</p>
+</li>
+</ol>
+</div>
 	</div>
 
 	
@@ -82,28 +114,106 @@
 	
 
 		<h2>Form submissions</h2>
-		<p>So far we&#8217;ve just looked at</p>
+		<div class='exercise alert alert-info'><strong>
+<p>Task:</p>
+</strong>
+<ol>
+<li>Open <code>basic_form.html</code> in Chrome.</li>
 
-<h3 id='input_names'>Input names</h3>
+<li>Fill in the name and email and click &#8216;Submit&#8217;.</li>
 
-<p><img alt='dev tools form submit get' src='/assets/dev_tools_form_submit_get.png' /></p>
+<li>What, if anything, happens?</li>
+</ol>
+</div>
+<h3 id='the_name_property'>The name property</h3>
 
-<p><img alt='dev tools form submit' src='/assets/dev_tools_form_submit.png' /></p>
+<p>When you clicked the submit button on the basic form, you probably noticed the url change to something like:</p>
+
+<pre><code>file:///Users/tomclose/Documents/Coding/html_forms/basic_form.html?name=tom&amp;email=tom%40example.com</code></pre>
+
+<p>the values that you entered into the form now appear in the url. (The strange <code>%40</code> is code for the <code>@</code> character, which isn&#8217;t allowed to appear in URLs.)</p>
+
+<p>The following things happened:</p>
+
+<ol>
+<li>The form packaged up the values you gave it. To do this it used the <code>name</code> property of each input tag.</li>
+
+<li>It submitted them to the <strong>same url</strong> you were on.</li>
+
+<li>It did this by appending them to the url as <em>query parameters</em>.</li>
+</ol>
+
+<p>The important thing in deciding how to package the values was the <code>name</code> property of the <code>&lt;input&gt;</code> tag. The tag</p>
+<div class='highlight'><pre><code class='html'><span class='nt'>&lt;input</span> <span class='na'>name=</span><span class='s'>&#39;email&#39;</span><span class='nt'>&gt;</span>
+</code></pre></div>
+<p>was converted to the name-value pair <code>email=tom%40example.com</code> in the URL.</p>
+
+<p>You can get a better idea of these stages by looking at the &#8216;Network&#8217; tab on Chrome&#8217;s developer tools:</p>
+<div class='exercise alert alert-info'><strong>
+<p>Task:</p>
+</strong>
+<ol>
+<li>Open Chrome&#8217;s developer tools and go to the &#8216;Network&#8217; tab.</li>
+
+<li>Put some new values into the form and press &#8216;Submit&#8217; again.</li>
+
+<li>Look at the information in the &#8216;Network&#8217; tab.</li>
+</ol>
+</div>
+<p>You should see something like the following: <img alt='dev tools form submit get' src='/assets/dev_tools_form_submit_get.png' /></p>
+
+<p>There are two <code>GET</code> requests. The first is to the same page, with the field names and their new values as query parameters. The second is to bootstrap - when your browser reloads the page with the new query paramenters, it finds the <code>&lt;link rel=&#39;stylesheet&#39; http=&#39;bootstrap/css/bootsrap.css&#39; &gt;</code> in the <code>&lt;head&gt;</code> and so fetches that file too.</p>
+
+<p>You can find out more about the first <code>GET</code> request by clicking on the <code>headers</code> tab: <img alt='dev tools form submit' src='/assets/dev_tools_form_submit.png' /></p>
+
+<p>You should be able to see the names and their values from the input elements.</p>
 
 <h3 id='get_and_post'>GET and POST</h3>
 
-<p>The other bit was the GET.</p>
+<p>In the above example we saw that the browser made two <code>GET</code> requests. <code>GET</code> is the most common <em>http verb</em>. It describes the normal way your browser asks for a webpage (and CSS files, js files, images etc.).</p>
 
-<p>GET and POST are two <em>http verbs</em>.</p>
+<p>The most important thing about <code>GET</code> requests is that they <strong>shouldn&#8217;t change any values on the server</strong>. For this reason they&#8217;re not usually used for form submissions, which are generally for providing new data to the server.</p>
+
+<p>We can change the form to submit using a <code>POST</code> request instead.</p>
 <div class='highlight'><pre><code class='html'>    <span class='nt'>&lt;form</span> <span class='na'>method=</span><span class='s'>&#39;post&#39;</span><span class='nt'>&gt;</span>
-</code></pre></div>
+</code></pre></div><div class='exercise alert alert-info'><strong>
+<p>Task:</p>
+</strong>
+<ol>
+<li>Change <code>basic_form.html</code> to submit via a post request.</li>
+
+<li>Reload the page, fill in some new values and resubmit the form.</li>
+
+<li>What happens? Have a look in the &#8216;Network&#8217; section of developer tools.</li>
+</ol>
+</div>
+<p>You should notice that this time <strong>the URL doesn&#8217;t change</strong>. When a form is submitted with a <code>POST</code> method the parameters are packaged up and sent along in the <code>headers</code>, instead of being put in the url. You can check this out in Developer tools:</p>
+
 <p><img alt='dev tools form submit post' src='/assets/dev_tools_form_submit_post.png' /></p>
+
+<p>You can see the name and values have been packaged into a payload.</p>
+
+<p><img alt='form submit payload' src='/assets/dev_tools_post_payload.png' /></p>
 
 <p><strong>Warning:</strong> Just because POST parameters aren&#8217;t sent in the URL <strong>doesn&#8217;t</strong> mean they are private. Unless you are using https, anyone watching your traffic can read all the information you&#8217;re submitting.</p>
 
 <h3 id='submitting_to_a_different_url'>Submitting to a different url</h3>
+
+<p>So far all our requests have been to the URL we were on. On the whole, this isn&#8217;t too useful. It&#8217;s easy to change though:</p>
 <div class='highlight'><pre><code class='html'>    <span class='nt'>&lt;form</span> <span class='na'>method=</span><span class='s'>&#39;post&#39;</span> <span class='na'>action=</span><span class='s'>&#39;thanks.html&#39;</span><span class='nt'>&gt;</span>
 </code></pre></div>
+<p>By setting the <code>action</code> attribute of the <code>form</code> tag we specify the URL to submit the form to.</p>
+<div class='exercise alert alert-info'><strong>
+<p>Task:</p>
+</strong>
+<ol>
+<li>Set the form in <code>basic_form.html</code> to submit to <code>thanks.html</code>.</li>
+
+<li>Refresh and resubmit the form.</li>
+
+<li>What happens? Where has your data gone?</li>
+</ol>
+</div>
 	</div>
 
 	
@@ -240,7 +350,75 @@
 	
 
 		<h2>More form elements</h2>
-		
+		<div class='exercise alert alert-info'><strong>
+<p>Task:</p>
+</strong>
+<ol>
+<li>Open <code>form_elements.html</code> in Sublime Text and in Chrome.</li>
+
+<li>Refer to both as you read through this page.</li>
+</ol>
+</div>
+<p>So far we have only looked at text field elements. As you&#8217;re probably aware from experience, there are many other options for html form fields. Here are some of the most common:</p>
+
+<h3 id='textarea'>Textarea</h3>
+<div class='highlight'><pre><code class='html'><span class='nt'>&lt;textarea</span> <span class='na'>name=</span><span class='s'>&#39;feedback&#39;</span> <span class='na'>rows=</span><span class='s'>&quot;3&quot;</span><span class='nt'>&gt;&lt;/textarea&gt;</span>
+</code></pre></div>
+<p>A textarea is like a text field, except is is expandable.</p>
+
+<h3 id='password_field'>Password field</h3>
+<div class='highlight'><pre><code class='html'><span class='nt'>&lt;input</span> <span class='na'>type=</span><span class='s'>&#39;password&#39;</span> <span class='na'>name=</span><span class='s'>&#39;user_password&#39;</span><span class='nt'>&gt;</span>
+</code></pre></div>
+<p>Password fields obscure your input as you type. They <strong>do not</strong> encrypt the value that was input - the password will be sent in plain text as a normal name-value pair in the payload. In particular, <strong>if you&#8217;re using http, anyone snooping on the line can read your password</strong>. If you want to be secure you have to use https.</p>
+
+<h3 id='radio_buttons_and_checkboxes'>Radio buttons and checkboxes</h3>
+<div class='highlight'><pre><code class='html'><span class='c'>&lt;!-- radio buttons --&gt;</span>
+<span class='nt'>&lt;input</span> <span class='na'>type=</span><span class='s'>&#39;radio&#39;</span> <span class='na'>name=</span><span class='s'>&#39;laptop-type&#39;</span> <span class='na'>value=</span><span class='s'>&#39;windows&#39;</span><span class='nt'>&gt;</span>
+<span class='nt'>&lt;input</span> <span class='na'>type=</span><span class='s'>&#39;radio&#39;</span> <span class='na'>name=</span><span class='s'>&#39;laptop-type&#39;</span> <span class='na'>value=</span><span class='s'>&#39;mac&#39;</span><span class='nt'>&gt;</span>
+<span class='nt'>&lt;input</span> <span class='na'>type=</span><span class='s'>&#39;radio&#39;</span> <span class='na'>name=</span><span class='s'>&#39;laptop-type&#39;</span> <span class='na'>value=</span><span class='s'>&#39;linux&#39;</span><span class='nt'>&gt;</span>
+
+<span class='c'>&lt;!-- checkboxes --&gt;</span>
+<span class='nt'>&lt;input</span> <span class='na'>type=</span><span class='s'>&#39;checkbox&#39;</span> <span class='na'>name=</span><span class='s'>&#39;languages-known&#39;</span> <span class='na'>value=</span><span class='s'>&#39;html&#39;</span><span class='nt'>&gt;</span>
+<span class='nt'>&lt;input</span> <span class='na'>type=</span><span class='s'>&#39;checkbox&#39;</span> <span class='na'>name=</span><span class='s'>&#39;languages-known&#39;</span> <span class='na'>value=</span><span class='s'>&#39;css&#39;</span><span class='nt'>&gt;</span>
+<span class='nt'>&lt;input</span> <span class='na'>type=</span><span class='s'>&#39;checkbox&#39;</span> <span class='na'>name=</span><span class='s'>&#39;languages-known&#39;</span> <span class='na'>value=</span><span class='s'>&#39;ruby&#39;</span><span class='nt'>&gt;</span>
+<span class='nt'>&lt;input</span> <span class='na'>type=</span><span class='s'>&#39;checkbox&#39;</span> <span class='na'>name=</span><span class='s'>&#39;languages-known&#39;</span> <span class='na'>value=</span><span class='s'>&#39;javascript&#39;</span><span class='nt'>&gt;</span>
+</code></pre></div>
+<p>Radio buttons and checkboxes are similar:</p>
+
+<ul>
+<li>You have multiple options linked by having the same name.</li>
+
+<li>Each option has a <code>value</code> which will be used in the name-value pair.</li>
+</ul>
+
+<p>They are different in that:</p>
+
+<ul>
+<li>In a group of radio buttons only one can be selected.</li>
+
+<li>In a group of checkboxes you can select zero, one or many.</li>
+
+<li>If you select multiple checkboxes a name-value pair will be created for each one.</li>
+</ul>
+
+<h3 id='select_boxes'>Select boxes</h3>
+<div class='highlight'><pre><code class='html'><span class='nt'>&lt;select</span> <span class='na'>name=</span><span class='s'>&#39;fruits&#39;</span><span class='nt'>&gt;</span>
+    <span class='nt'>&lt;option</span> <span class='na'>value=</span><span class='s'>&#39;banana&#39;</span><span class='nt'>&gt;</span>banana<span class='nt'>&lt;/option&gt;</span>
+    <span class='nt'>&lt;option</span> <span class='na'>value=</span><span class='s'>&#39;apple&#39;</span><span class='nt'>&gt;</span>apple<span class='nt'>&lt;/option&gt;</span>
+    <span class='nt'>&lt;option</span> <span class='na'>value=</span><span class='s'>&#39;pear&#39;</span><span class='nt'>&gt;</span>pear<span class='nt'>&lt;/option&gt;</span>
+    <span class='nt'>&lt;option</span> <span class='na'>value=</span><span class='s'>&#39;tomato&#39;</span><span class='nt'>&gt;</span>tomato<span class='nt'>&lt;/option&gt;</span>
+<span class='nt'>&lt;/select&gt;</span>
+</code></pre></div>
+<p>Select boxes provide a drop-down list of options. Note how the <code>&lt;select&gt;</code> contains the name and each <code>&lt;option&gt;</code> has a different <code>value</code>.</p>
+
+<h3 id='other_options'>Other options</h3>
+<div class='highlight'><pre><code class='html'><span class='nt'>&lt;input</span> <span class='na'>type=</span><span class='s'>&#39;color&#39;</span><span class='nt'>&gt;</span>
+<span class='nt'>&lt;input</span> <span class='na'>type=</span><span class='s'>&#39;date&#39;</span><span class='nt'>&gt;</span>
+<span class='nt'>&lt;input</span> <span class='na'>type=</span><span class='s'>&#39;time&#39;</span><span class='nt'>&gt;</span>
+</code></pre></div>
+<p>There are several other options for html input types. For a complete list see <a href='http://www.w3schools.com/tags/tag_input.asp'>here</a>. I don&#8217;t know how well supported these &#8216;other&#8217; types are across browsers - I haven&#8217;t seen them widely used, so they could be new. Probably worth checking before you start relying on them!</p>
+
+<p>For more information about styling forms have a look at the <a href='http://twitter.github.io/bootstrap/base-css.html#forms'>Twitter Bootstrap forms section</a>.</p>
 	</div>
 
 </div>
